Fixed H1 alignment
Fixed H1 alignment

--- a/old-site/css/contact.css
+++ b/old-site/css/contact.css
@@ -64,10 +64,10 @@ h2 {
   background-position: top;
   position: relative;
   height: 25vh;
-  max-width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 1000px;
   } 
 .orange-overlay {
   background:#FF2400; 
@@ -83,13 +83,11 @@ h2 {
   width: 100%;
 }
 h1 {
-  position: absolute;
+  position: relative;
   text-align: center;
   transform: translateY(-50%);
   color: white;
-  left: 29%;
-  bottom: 40%;
-  margin: auto;
+  bottom: 60%;
 }
 .twitter {
   width: 50%;
@@ -146,10 +144,8 @@ footer p {
 /* ------------------------For Mobile----------------------------- */
 @media (max-width: 767px) {
   .body-wrap {
-  background: #F2F2F2;
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
+    background: #F2F2F2;
+    margin: 0 auto;
   }
   body, html {
     padding: 0;
@@ -175,5 +171,13 @@ footer p {
     top: 20px;
     right: 150px;
     float: none;
+  }
+  .intro  {
+    width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .orange-overlay {
+    width: auto;
   }
 }
